# KURE-Project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  EXPERIMENTS.md  FINAL_CHECKLIST.md  INNOVATION_SUMMARY.md  LICENSE  MODAL_DEPLOYMENT.md  MODAL_QUICK_START.md  Makefile  PAPER_DRAFT.md  PROJECT_COMPLETE.md  PROJECT_OVERVIEW.md  PUSH_TO_GITHUB.md  README.md  README_MODAL.md  deploy_to_modal.py  docker-compose.yml  modal_app.py  modal_requirements.txt  modal_web_interface.py  pyproject.toml  requirements.txt  run_evaluation.py  run_inference.py  run_training.py  setup.py  setup_modal_secrets.py  test_modal_deployment.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  modal-test.yml  publish.yml  release.yml
configs/: base.yaml  quadratic.yaml  sb.yaml  spline.yaml
scripts/: download_coco.py  evaluate.py  init_github.sh  sample.py  setup_project.sh  train.py
src/: __init__.py
src/data/: __init__.py  datasets.py
src/evaluation/: compositional_suite.py  metrics.py
src/models/: __init__.py  nrf_base.py  unet.py  vae.py
src/models/teachers/: __init__.py  cubic_spline.py  linear.py  quadratic.py  schrodinger_bridge.py
src/training/: __init__.py  trainer.py
tests/: __init__.py  conftest.py  test_nrf_base.py  test_teachers.py  test_vae.py
